# spatialgeometry

./: .gitattributes  README.md  arm_dh.html  arm_erobot.html  arm_ets.html  arm_superclass.html  genindex.html  index.html  intro.html  mobile.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/: build-wheels.sh
.github/workflows/: build.yml  cibuildwheel.yml  python-publish.yml  python_publish_linux.yml  pythonpackage.yml  upload_tar.yml
_modules/: collections.html
docs/source/: conf.py  index.rst
spatialgeometry/: CollisionShape.py  SceneGroup.py  SceneNode.py  Shape.py  __init__.py
spatialgeometry/core/: linalg.h  scene.c  scene.cpp  scene.h
spatialgeometry/geom/: CollisionShape.py
tests/: test_Shape.py
